# bian-lang

./: .gitignore  0.bootstrap.js  Cargo.toml  README.md  bootstrap.js
.github/workflows/: codepad.yml
bian-desk/: package-lock.json  package.json
bian-desk/public/: index.html
bian-desk/src/: bian.js  index.js  index.jsx
bian-desk/src-tauri/: Cargo.toml  tauri.conf.json
bian-desk/src-tauri/src/: main.rs
bian-front/: Cargo.toml
bian-front/pkg/: README.md  bian_front_wasm.d.ts  bian_front_wasm.js  bian_front_wasm_bg.js  bian_front_wasm_bg.wasm  bian_front_wasm_bg.wasm.d.ts  package.json
bian-front/src/: lib.rs
bian-front/www/: SimpleJson.jsx  bootstrap.js  index.css  index.jsx  package-lock.json  package.json  w.js  webpack.config.js
bian-front/www/src/: index.html
bian-lang/: Cargo.toml
bian-lang/src/: lib.rs
bian-lang/src/ast/: compile.rs  compute.rs  mod.rs  transform.rs
bian-lang/src/ast/test/: compute.rs  flows.rs  mod.rs  transform.rs  variable.rs
bian-lang/src/parsers/: compute.rs  flows.rs  mod.rs
bian-lang/src/parsers/test/: compute.rs  error.rs  flows.rs  mod.rs  statement.rs  variable.rs
bian-lang/src/test/: error.rs  flows.rs  mod.rs  variable.rs
bian-lang/src/wasm/test/: flows.rs  mod.rs
doc/: 1.md  2.md  2_5.md  2_8.md  2_9.md  3.md
src/: ast.rs  main.rs  test.rs
src/ast/: compile.rs  mod.rs  test.rs  test_variable.rs
src/parsers/: mod.rs  test.rs  test_variable.rs
src/parsers/test/: variable.rs
src/test/: error.rs  mod.rs
src/wasm/: mod.rs  test.rs  test_variable.rs
src/wasm/test/: mod.rs
